# exodapt_robot_actions

./: .gitignore  .gitmodules  .rosinstall  README.md  pyproject.toml  requirements.txt
ros2_ws/: run_colcon_build.sh
ros2_ws/src/long_dummy_action/: package.xml  setup.cfg  setup.py
ros2_ws/src/long_dummy_action/launch/: long_dummy_action_launch.xml
ros2_ws/src/long_dummy_action/long_dummy_action/: long_dummy_action.py  long_dummy_action_client.py
ros2_ws/src/long_dummy_action/tests/: test_long_dummy_action.py
ros2_ws/src/reply_action/: package.xml  setup.cfg  setup.py
ros2_ws/src/reply_action/launch/: reply_action_launch.xml  reply_tts_action_launch.xml
ros2_ws/src/reply_action/reply_action/: reply_action.py  reply_tts_action.py
ros2_ws/src/reply_action/tests/: test_reply_action_server.py
