<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>long_dummy_action</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="robin@exodapt.ai">Robin Karlsson</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>exodapt_robot_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
